force-app/main/default/objects/XactlyExpress__XCOAuth_Token__c/XactlyExpress__XCOAuth_Token__c.object-meta.xml
<CustomObject>
    <label>XCOAuth_Token</label>
    <nameField>
        <label>XCOAuth_Token__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCOAuth_Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>