force-app/main/default/objects/XactlyExpress__XCOAuth_Token__c/fields/XactlyExpress__isAccess__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__isAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAccess</label>
    <type>Checkbox</type>
</CustomField>