force-app/main/default/objects/XactlyExpress__XCOAuth_Token__c/fields/XactlyExpress__OAuthService__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__OAuthService__c</fullName>
    <label>OAuthService</label>
    <referenceTo>XactlyExpress__XCOAuthService__c</referenceTo>
    <relationshipLabel>XCOAuth_Tokens (XCOAuthService)</relationshipLabel>
    <relationshipName>tokens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>