force-app/main/default/objects/XactlyExpress__XCOAuth_Token__c/fields/XactlyExpress__Owner__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>XCOAuth_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>