force-app/main/default/objects/XactlyExpress__XCOAuth_Token__c/fields/XactlyExpress__realmId__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__realmId__c</fullName>
    <label>realmId</label>
    <type>TextArea</type>
</CustomField>