force-app/main/default/objects/XactlyExpress__XCOAuth_Token__c/fields/XactlyExpress__secret__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__secret__c</fullName>
    <label>secret</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>